# crapssim

./: .buildinfo  .gitignore  API_DESIGN_INTENT.md  API_DESIGN_PRINCIPLES.md  API_ROADMAP_V2.md  API_TEST_STATUS.md  CHANGELOG.html  CHANGELOG.md  CHANGELOG_API.md  CONTRIBUTING  CONTRIBUTING.md  NOVA_AGENT_ENTRYPOINT.yaml  PHASE_CHECKLIST.md  README-evo.md  README.md  REPORT_API_BRANCH_SYNC.md  REPORT_API_FIX.md  REPORT_API_POLISH.md  REPORT_P1.md  REPORT_P2.md  REPORT_P3.md  REPORT_P4.md  REPORT_P5.md  REPORT_P6.md  REPORT_P7.md  REPORT_P8.md  REPORT_PRE_PR_API.md  REPORT_api_optional.md  REPORT_api_sync.md  REPORT_verification.md  ROADMAP_API_V2.md  Roadmap.md  changelog.html  contributing.html  crapssim_sandbox.html  crapssim_sandbox.ipynb  genindex.html  index.html  installation.html  mypy.ini  (+11 more)
Python/: CrapsTable.py  bet.py  betting_strategies.py  craps-test.py  dice.py  player.py  run_simulations.py  tempCodeRunnerFile.py
_sources/: CHANGELOG.md.txt  index.md.txt  tutorial-strategy-01.ipynb.txt
autoapi/: index.html
crapssim/: LICENSE  __init__.py  bet.py  dice.py  player.py  strategy.py  table.py
crapssim-evo-main/: README.md
crapssim_api/: __init__.py  actions.py  capabilities.py  determinism.py  errors.py  events.py  fastapi_app.py  hand_state.py  http.py  rng.py  session.py  session_store.py  state.py  tape.py  types.py  version.py
doc/: installation.rst
docs/: API_CHANGELOG.md  API_DESIGN_INTENT.md  API_OVERVIEW.md  API_PHASES.md  API_PHASE_ROADMAP.md  API_PHASE_STATUS.md  API_ROADMAP.md  API_ROADMAP_V2.md  API_VERBS.md  CHANGELOG.md  CHANGELOG_API.md  VXP_METHODLOGY.md  _phase2_template.md  conf.py  crapssim_sandbox.ipynb  index.md  supported-bets.md  tutorial-strategy-01.ipynb
evo_engine/: __init__.py  config.py  lineage.py  mutation.py  population.py  rollsets.py  scoring.py  stats.py  util.py
examples/: api_client_min.py  (+5 more)
(+278 files in other folders)
