[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["reports", "dist", "build", ".venv"]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
  "stress: long-running stress tests (excluded from default CI)",
]

[project.optional-dependencies]
api = [
  "fastapi",
  "pydantic",
  "uvicorn",
]
