[metadata]
name = crapssim
version = 0.1.0
author = Sean Kent
author_email = skent259@gmail.com
description = Simulator for Craps with various betting strategies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skent259/CrapsSim
project_urls =
    Bug Tracker = https://github.com/skent259/CrapsSim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires = ['numpy']

[options]
packages = find:
python_requires = >=3.6
