[metadata]
name = crapssim
version = 0.3.2
author = "Sean Kent, @amortization, @nova-rey"
author_email = skent259@gmail.com
description = Simulator for Craps with various betting strategies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skent259/CrapsSim
project_urls =
    Bug Tracker = https://github.com/skent259/CrapsSim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    numpy >= 1.18.0
python_requires = >=3.10

[options.extras_require]
testing =
    pytest